force-app/main/default/objects/Payment_Plan_Detail__c/Payment_Plan_Detail__c.object-meta.xml
<CustomObject>
    <label>Payment Plan Detail</label>
    <nameField>
        <displayFormat>PPD-{0000000}</displayFormat>
        <label>Payment Plan No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Plan Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>