force-app/main/default/objects/Payment_Plan_Detail__c/fields/Amount_to_Repaid__c.field-meta.xml
<CustomField>
    <fullName>Amount_to_Repaid__c</fullName>
    <label>Amount to Repay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>