force-app/main/default/objects/Payment_Plan_Detail__c/validationRules/ChangeTheStatusToPaid.validationRule-meta.xml
<ValidationRule>
    <fullName>ChangeTheStatusToPaid</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISPICKVAL(Status__c,&apos;Paid&apos;)),NOT(ISBLANK(Received_Amount__c)))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Update the status to &quot;paid&quot;</errorMessage>
</ValidationRule>