force-app/main/default/objects/Payment_Plan_Detail__c/validationRules/EnterTheReceivedAmount.validationRule-meta.xml
<ValidationRule>
    <fullName>EnterTheReceivedAmount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISPICKVAL(Status__c,&apos;Paid&apos;),ISPICKVAL(Status__c,&apos;Partially Paid&apos;)),ISBLANK(Received_Amount__c))</errorConditionFormula>
    <errorDisplayField>Received_Amount__c</errorDisplayField>
    <errorMessage>Please enter the amount</errorMessage>
</ValidationRule>